XO_Project_UAT/Project--XOGrp--UAT/src/objects/Live_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_AutoRenewal__c, Post_AutoRenewal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AutoRenewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoB_Value__c</fullName>
        <description>CSP-3384</description>
        <formula>Case(Product_Line__c,
&apos;Internet&apos;,Original_Subscription__r.Zuora__MRR__c,
&apos;Print&apos;,Original_Subscription__r.Zuora__TCV__c,
&apos;Direct Mail&apos;,Original_Subscription__r.Zuora__TCV__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BoB Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Subscription_Status__c</fullName>
        <formula>IF(CONTAINS(Name,&apos;CES&apos;), 
&apos;Migrated&apos;, 
IF(NOT(Post_Is_Valid_Subscription__c), 
&apos;Invalid&apos;, 
If(Post_Zuora_TermStartDate__c&gt;Today(), 
&apos;Pending&apos;, 
If(Post_Zuora_TermEndDate__c&gt;=Today(), 
&apos;Live&apos;, 
If(Post_Zuora_Status__c=&apos;Cancelled&apos;, 
&apos;Cancelled&apos;, 
&apos;Expired&apos; 
) 
) 
)
)
)</formula>
        <label>Commission Subscription Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>IF( NOT(ISBLANK(Text(Post_Latest_Quote__r.zqu__Currency__c))), Text(Post_Latest_Quote__r.zqu__Currency__c), 
IF(NOT(ISBLANK(Text(Pre_Latest_Quote__r.zqu__Currency__c))), Text(Pre_Latest_Quote__r.zqu__Currency__c), 
IF(NOT(ISBLANK(Text(Original_Quote__r.zqu__Currency__c))), Text(Original_Quote__r.zqu__Currency__c),&apos;USD&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Valid_Subscription__c</fullName>
        <formula>Post_Is_Valid_Subscription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Valid Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Quote__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Latest_Quote__c, Post_Latest_Quote__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Opportunity__c, Post_Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>OriginalQuote1</relationshipLabel>
        <relationshipName>OriginalQuote1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>OrignialSubscription1</relationshipLabel>
        <relationshipName>OrignialSubscription1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Payment_Method__c, Post_Payment_Method__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_AutoRenewal__c</fullName>
        <label>Post AutoRenewal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Is_Valid_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Is Valid Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Latest_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Latest Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>PostlatestQuote1</relationshipLabel>
        <relationshipName>PostlatestQuote1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PostOpportunity1</relationshipLabel>
        <relationshipName>PostOpportunity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Payment_Method__c</fullName>
        <label>Post Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Preferred_Payment_Schedule__c</fullName>
        <label>Post Preferred Payment Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Quote_Number__c</fullName>
        <label>Post Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_RSD_Id__c</fullName>
        <label>Post RSD Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_RenewalRepId__c</fullName>
        <label>Post Renewal Rep Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Renewal_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Renewal Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Subscriptions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_SalesRepId__c</fullName>
        <label>Post SalesRepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>PostSalesRep1</relationshipLabel>
        <relationshipName>PostSalesRep1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Zuora Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PostZuoraAccount1</relationshipLabel>
        <relationshipName>PostZuoraAccount1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_ContractEffectiveDate__c</fullName>
        <label>Post Zuora ContractEffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_CustomerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Zuora CustomerAccount</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>PostZuorabillingAccount1</relationshipLabel>
        <relationshipName>PostZuorabillingAccount1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_InitialTermPeriodType__c</fullName>
        <label>Post Zuora InitialTermPeriodType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_InitialTerm__c</fullName>
        <label>Post Zuora InitialTerm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_Status__c</fullName>
        <label>Post Zuora Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_SubscriptionEndDate__c</fullName>
        <label>Post Zuora Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_SubscriptionStartDate__c</fullName>
        <label>Post Zuora Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_TermEndDate__c</fullName>
        <label>Post Zuora Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_TermSettingType__c</fullName>
        <label>Post Zuora TermSettingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Zuora_TermStartDate__c</fullName>
        <label>Post Zuora Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_AutoRenewal__c</fullName>
        <label>Pre AutoRenewal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Is_Valid_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Is Valid Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Latest_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Latest Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>PrelatestQuote1</relationshipLabel>
        <relationshipName>PrelatestQuote1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PreOpportunity1</relationshipLabel>
        <relationshipName>PreOpportunity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Payment_Method__c</fullName>
        <label>Pre Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Preferred_Payment_Schedule__c</fullName>
        <label>Pre Preferred Payment Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Quote_Number__c</fullName>
        <label>Pre Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_RSD_Id__c</fullName>
        <label>Pre RSD Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_RenewalRepId__c</fullName>
        <label>Pre Renewal Rep Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Renewal_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Renewal Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Subscriptions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_SalesRepId__c</fullName>
        <label>Pre SalesRepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>PreSalesRep1</relationshipLabel>
        <relationshipName>PreSalesRep1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Zuora Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PreZuoraAccount1</relationshipLabel>
        <relationshipName>PreZuoraAccount1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_ContractEffectiveDate__c</fullName>
        <label>Pre Zuora ContractEffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_CustomerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Zuora CustomerAccount</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>PreZuorabillingAccount1</relationshipLabel>
        <relationshipName>PreZuorabillingAccount1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_InitialTermPeriodType__c</fullName>
        <label>Pre Zuora InitialTermPeriodType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_InitialTerm__c</fullName>
        <label>Pre Zuora InitialTerm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_Status__c</fullName>
        <label>Pre Zuora Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_SubscriptionEndDate__c</fullName>
        <label>Pre Zuora Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_SubscriptionStartDate__c</fullName>
        <label>Pre Zuora Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_TermEndDate__c</fullName>
        <label>Pre Zuora Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_TermSettingType__c</fullName>
        <label>Pre Zuora TermSettingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Zuora_TermStartDate__c</fullName>
        <label>Pre Zuora Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment_Schedule__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Preferred_Payment_Schedule__c, Post_Preferred_Payment_Schedule__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Payment Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Quote_Number__c, Post_Quote_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Id__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_RSD_Id__c, Post_RSD_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSD Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <formula>IF(TODAY()&lt; Switch_Date__c , Pre_RSD__r.FirstName &amp; &quot; &quot;&amp;Pre_RSD__r.LastName, Post_RSD__r.FirstName &amp; &quot; &quot;&amp;Post_RSD__r.LastName)</formula>
        <label>RSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Rep_Id__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_RenewalRepId__c, Post_RenewalRepId__c)</formula>
        <label>Renewal Rep Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Rep__c</fullName>
        <formula>IF(TODAY()&lt; Switch_Date__c, Pre_Renewal_Rep__r.FirstName &amp; &quot; &quot;&amp;Pre_Renewal_Rep__r.LastName, Post_Renewal_Rep__r.FirstName &amp; &quot; &quot;&amp;Post_Renewal_Rep__r.LastName)</formula>
        <label>Renewal Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_Subscription_Name__c</fullName>
        <label>Residual Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepId__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_SalesRepId__c, Post_SalesRepId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesRepId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>IF(TODAY()&lt; Switch_Date__c, Pre_Sales_Rep__r.FirstName &amp; &quot; &quot;&amp; Pre_Sales_Rep__r.LastName, Post_Sales_Rep__r.FirstName &amp; &quot; &quot;&amp;  Post_Sales_Rep__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <externalId>true</externalId>
        <label>Subscription Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subscription_Version__c</fullName>
        <label>Subscription Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Switch_Date__c</fullName>
        <label>Switch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_Account__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_Account__c, Post_Zuora_Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_CancelledDate__c</fullName>
        <label>Zuora CancelledDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_ContractEffectiveDate__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_ContractEffectiveDate__c, Post_Zuora_ContractEffectiveDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora ContractEffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_CustomerAccount__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_CustomerAccount__c, Post_Zuora_CustomerAccount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora CustomerAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_InitialTermPeriodType__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_InitialTermPeriodType__c, Post_Zuora_InitialTermPeriodType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora InitialTermPeriodType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_InitialTerm__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_InitialTerm__c, Post_Zuora_InitialTerm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora InitialTerm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Status__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_Status__c, Post_Zuora_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_SubscriptionEndDate__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_SubscriptionEndDate__c, Post_Zuora_SubscriptionEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_SubscriptionStartDate__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_SubscriptionStartDate__c, Post_Zuora_SubscriptionStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_TermEndDate__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_TermEndDate__c, Post_Zuora_TermEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora_TermSettingType__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_TermSettingType__c, Post_Zuora_TermSettingType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora TermSettingType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_TermStartDate__c</fullName>
        <formula>IF(TODAY()&lt;Switch_Date__c, Pre_Zuora_TermStartDate__c, Post_Zuora_TermStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zuora Term Start Date</label>
        <type>Date</type>
    </fields>
    <label>Live Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AutoRenewal__c</columns>
        <columns>Commission_Subscription_Status__c</columns>
        <columns>Currency__c</columns>
        <columns>Is_Valid_Subscription__c</columns>
        <columns>Latest_Quote__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Original_Quote__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Live Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>